src/bindings.rs

#[test]
fn bindgen_test_layout_recorder_data() {
    assert_eq!(
        ::std::mem::size_of::<recorder_data>(),
        40usize,
        concat!("Size of: ", stringify!(recorder_data))
    );
    assert_eq!(
        ::std::mem::align_of::<recorder_data>(),
        8usize,
        concat!("Alignment of ", stringify!(recorder_data))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<recorder_data>())).pid as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(recorder_data),
            "::",
            stringify!(pid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<recorder_data>())).event_pipe as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(recorder_data),
            "::",
            stringify!(event_pipe)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<recorder_data>())).cpu as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(recorder_data),
            "::",
            stringify!(cpu)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<recorder_data>())).closed as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(recorder_data),
            "::",
            stringify!(closed)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<recorder_data>())).stream as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(recorder_data),
            "::",
            stringify!(stream)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<recorder_data>())).record as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(recorder_data),
            "::",
            stringify!(record)
        )
    );
}
extern "C" {
    pub fn create_recorders(
        tracefs: *mut tracefs_instance,
        cpu_cnt: ::std::os::raw::c_int,
    ) -> *mut recorder_data;
}
extern "C" {
    pub fn create_recorder(
        cpu: ::std::os::raw::c_int,
        event_pipe: *mut ::std::os::raw::c_int,
        tracefs_path: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn stop_threads(recorders: *mut recorder_data, cpu_cnt: ::std::os::raw::c_int);
}
extern "C" {
    pub fn wait_threads(recorders: *mut recorder_data, cpu_cnt: ::std::os::raw::c_int);
}
extern "C" {
    pub fn my_test_2();
}
extern "C" {
    pub fn parse_event_rbftrace(
        source: *mut tep_event,
        target: *mut rbftrace_event,
        record: *mut tep_record,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn init_stream(
        read_fd: ::std::os::raw::c_int,
        cpu: ::std::os::raw::c_int,
        cpu_cnt: ::std::os::raw::c_int,
    ) -> *mut tracecmd_input;
}
extern "C" {
    pub fn read_stream(
        recorders: *mut recorder_data,
        cpu_cnt: ::std::os::raw::c_int,
        rbf_event: *mut rbftrace_event,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn print_event(event: *mut rbftrace_event);
}
extern "C" {
    pub fn my_test();
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout___va_list_tag() {
    assert_eq!(
        ::std::mem::size_of::<__va_list_tag>(),
        24usize,
        concat!("Size of: ", stringify!(__va_list_tag))
    );
    assert_eq!(
        ::std::mem::align_of::<__va_list_tag>(),
        8usize,
        concat!("Alignment of ", stringify!(__va_list_tag))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).gp_offset as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(gp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).fp_offset as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(fp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).overflow_arg_area as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(overflow_arg_area)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).reg_save_area as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(reg_save_area)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __locale_data {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct re_dfa_t {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct buffer_instance {
    pub _address: u8,
}
